--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Countdown – Tage · Stunden · Minuten</title>
+<title>Countdown für Spiele-Abend – Tage · Stunden · Minuten</title>
 <style>
 :root {
 --bg: #0b1220;
@@ -110,4 +110,5 @@ footer { text-align: center; color: var(--muted); font-size: .9rem; }
 
 
 <script>
+
 </html>
