--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
 <body>
   <main class="wrap">
     <header>
-      <h1>Countdown</h1>
-      <p class="lead">Zählt präzise <strong>Tage</strong>, <strong>Stunden</strong>, <strong>Minuten</strong> und <strong>Sekunden</strong> bis zu deinem Zielzeitpunkt.</p>
+      <h1>Spiele-Abend Countdown</h1>
+      <p class="lead">Zählt präzise <strong>Tage</strong>, <strong>Stunden</strong>, <strong>Minuten</strong> und <strong>Sekunden</strong> bis zum nächsten Spiele-Abend</p>
     </header>
 
     <section class="card" aria-label="Zielzeitpunkt setzen">
@@ -97,7 +97,7 @@
     </section>
 
     <footer>
-      <span>© <span id="year"></span> Countdown</span>
+      <span>© <span id="year"></span> ChatGPT</span>
     </footer>
   </main>
 
