--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     html, body { height: 100%; margin: 0; padding: 0; }
     body {
       font-family: system-ui, sans-serif;
-      background: var(--dark-gray);
+
       color: var(--text);
       display: grid; place-items: center;
       padding: 20px;
@@ -71,7 +71,7 @@
     }
     footer {
       font-size: 0.9rem;
-      color: var(--text);
+      color: var(--primary-blue);
       margin-top: 20px;
     }
   </style>
